[package]
name = "attohttpc-smoke-test"
version = "0.1.0"
authors = ["Sergey \"Shnatsel\" Davidoff <sdavydov@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = {version = "0.16", default-features = false, features = ["tls-rustls", "charsets", "compress"]}

