[package]
name = "awc-smoke-test"
version = "0.1.0"
authors = ["Sergey \"Shnatsel\" Davidoff <sdavydov@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = "3.0.0-beta.3"
futures = "0.3.13"
tokio = {version = "1.0", features = ["full"] }