[package]
name = "awc-smoke-test"
version = "0.1.0"
authors = ["Sergey \"Shnatsel\" Davidoff <sdavydov@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = {version = "3.0.0-beta.3", features = ["rustls"]}
actix-rt = "2.1.0"
tokio = {version = "1.0", default-features=false, features = ["time"] }