[package]
name = "hreq-smoke-test"
version = "0.1.0"
authors = ["Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hreq = {version = "0.7.1", default-features = false, features = ["tls", "tokio", "gzip"]}
