[package]
name = "reqwest-smoke-test"
version = "0.1.0"
authors = ["Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", default-features = false, features = ["rustls-tls-native-roots", "blocking", "gzip", "brotli", "cookies"]}
