[package]
name = "zeptohttpc-smoke-test"
version = "0.1.0"
authors = ["Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zeptohttpc = { version = "0.2.1", features = ["flate2", "encoding_rs", "tls"] }
